welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:3: error: '(' expected but identifier found.
		if equalOk return true
                   ^inOrderEqual:5: error: illegal start of simple expression
	} 
        ^